# domains/member/member-application/src/main/kotlin/devcoop/occount/member/application/usecase/identity/VerifyIdentityResponse.kt
@@ -1,0 +1,7 @@
+package devcoop.occount.member.application.usecase.identity
+
+data class VerifyIdentityResponse(
+    val userCiNumber: String,
+    val username: String,
+    val userPhone: String,
+)
